// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render with default styles 1`] = `
.circuit-2 {
  display: inline-block;
  position: relative;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.21);
  color: #212933;
  padding: 8px 32px 8px 12px;
  position: relative;
  font-size: 15px;
  line-height: 24px;
  z-index: 30;
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:hover,
.circuit-0:active {
  outline: none;
}

.circuit-0:focus {
  border: 1px solid #3388FF;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

<div
  className="circuit-2 circuit-3"
>
  <select
    className="circuit-0 circuit-1"
    disabled={false}
  >
    <option>
      Select an option
    </option>
    <option
      label="Option 1"
      value={1}
    >
      Option 1
    </option>
    <option
      label="Option 2"
      value={2}
    >
      Option 2
    </option>
    <option
      label="Option 3"
      value={3}
    >
      Option 3
    </option>
  </select>
  <div>
    down-triangle.svg
  </div>
</div>
`;

exports[`Select should render with disabled styles when passed the disabled prop 1`] = `
.circuit-2 {
  display: inline-block;
  position: relative;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.21);
  color: #212933;
  padding: 8px 32px 8px 12px;
  position: relative;
  font-size: 15px;
  line-height: 24px;
  z-index: 30;
  opacity: 0.4;
  pointer-events: none;
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:hover,
.circuit-0:active {
  outline: none;
}

.circuit-0:focus {
  border: 1px solid #3388FF;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

<div
  className="circuit-2 circuit-3"
>
  <select
    className="circuit-0 circuit-1"
    disabled={true}
  >
    <option>
      Select an option
    </option>
    <option
      label="Option 1"
      value={1}
    >
      Option 1
    </option>
    <option
      label="Option 2"
      value={2}
    >
      Option 2
    </option>
    <option
      label="Option 3"
      value={3}
    >
      Option 3
    </option>
  </select>
  <div>
    down-triangle.svg
  </div>
</div>
`;
